--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
   - node_js: '0.10'
     env: BIN="ringo"
   - node_js: '0.10'
-    env: SAUCE_LABS=true
+    env: BIN="node" SAUCE_LABS=true
 git:
   depth: 10
 branches:
@@ -29,7 +29,7 @@ branches:
   - dev
   - saucelabs
 before_install:
-- '[ $SAUCE_LABS == false ] || npm i chalk@"~0.4.0" ecstatic@"~0.4.0" request@"~2.34.0" sauce-tunnel@"~1.1.0" lodash@"~2.4.1" wd@"~0.2.17" wd-tap@"~0.1.0"'
+- '[ $SAUCE_LABS == false ] || npm i chalk@"~0.4.0" ecstatic@"~0.4.0" request@"~2.34.0" sauce-tunnel@"~1.1.0" lodash@"git://github.com/lodash/lodash.git#61199083688589f572a6444d0d4ed34bb6f7a572" wd@"~0.2.17" wd-tap@"~0.1.0"'
 - '[ $BIN == ''istanbul'' ] && npm i -g istanbul@"~0.1.0" || true'
 - '[ $BIN == ''narwhal'' ] && wget https://github.com/280north/narwhal/archive/v0.3.2.zip
   && sudo unzip v0.3.2 -d /opt/ && rm v0.3.2.zip || true'
@@ -46,7 +46,7 @@ before_install:
   && sudo chmod +x /usr/local/bin/ringo || true'
 install: true
 script:
-- '[ $BIN != ''istanbul'' ] || $BIN cover ./test/test_json3.js'
-- '[ $BIN == ''istanbul'' ] || cd test && $BIN ./test_json3.js'
-- '[ $SAUCE_LABS == false ] || $BIN ./test/saucelabs.js name="json3 tests" runner="test/test_browser.html?saucelabs=true" tags="development"'
-- '[ $SAUCE_LABS == false ] || $BIN ./test/saucelabs.js name="json3 tests" runner="test/test_browser.html?saucelabs=true&minified=true" tags="minified"'
+- '[ $BIN == ''istanbul'' ] && $BIN cover ./test/test_json3.js || true'
+- '[ $BIN != ''istanbul'' ] && [ $SAUCE_LABS == false ] && cd test && $BIN ./test_json3.js || true'
+- '[ $SAUCE_LABS == false ] || ($BIN ./test/saucelabs.js name="json3 tests" runner="test/test_browser.html?saucelabs=true" tags="development")'
+- '[ $SAUCE_LABS == false ] || ($BIN ./test/saucelabs.js name="json3 tests" runner="test/test_browser.html?saucelabs=true&minified=true" tags="minified")'
