--- a/.travis.yml
+++ b/.travis.yml
@@ -48,5 +48,5 @@ install: true
 script:
 - '[ $BIN == ''istanbul'' ] && $BIN cover ./test/test_json3.js || true'
 - '[ $BIN != ''istanbul'' ] && [ $SAUCE_LABS == false ] && cd test && $BIN ./test_json3.js || true'
-- '[ $SAUCE_LABS == false ] || ($BIN ./test/saucelabs.js name="json3 tests" runner="test/test_browser.html?saucelabs=true" tags="development")'
-- '[ $SAUCE_LABS == false ] || ($BIN ./test/saucelabs.js name="json3 tests" runner="test/test_browser.html?saucelabs=true&minified=true" tags="minified")'
+- '[ $SAUCE_LABS == false ] || ($BIN ./test/saucelabs.js name="json3 tests" runner="test/test_browser.html?saucelabs=true" tags="development" recordScreenshots="true")'
+- '[ $SAUCE_LABS == false ] || ($BIN ./test/saucelabs.js name="json3 tests" runner="test/test_browser.html?saucelabs=true&minified=true" tags="minified" recordScreenshots="true")'
